# dns-observe

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml  usage.py  useage.py
.github/workflows/: publish-to-test-pypi.yml
src/dns_observe/: __init__.py  __main__.py  console.py  dns.py  parameters.py  utils.py
tests/: domain_list.txt  test_data_view.py  test_decompression.py  test_message.py  test_run.py
