[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-observe"
authors = [
  { name="xavier skip", email="xavierskip@gmail.com" },
]
license = { file = "LICENSE" }
description = "a simple client to observe dns pollution network situation under Great Firewall."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.scripts]
dns-observe = "dns_observe.dns:main"

[project.urls]
"Homepage" = "https://github.com/xavierskip/dns-observe"
"Bug Tracker" = "https://github.com/xavierskip/dns-observe/issues"

[tool.setuptools.dynamic]
version = {attr = "dns_observe.__version__"}